update classes and documentation
